test/tests/errors/error-record-removed-from-environment.sm
// true
// false
// false
/**/
/**/

program {
    record person(name: string, age: int);
    person.age = 22;
    output age;
}